tests/traci/variable_subscription/errors/ArrivedVehicle/errors.traci
Error: Answered with error to command 0xa4: Vehicle '0' is not known
Error: Answered with error to command 0xd4: Could not add subscription (Vehicle '0' is not known).
